# agent_c_fork

./: .agent_c.meta.yaml  .dockerignore  .gitignore  README.md  agent_c.config.example  agentc  agentc.bat  api.Dockerfile  client.Dockerfile  dev_client  dev_client.bat  docker-compose-client-only.yml  docker-compose.yml  entrypoint.sh  example.env  local_workspaces.example.json  pythonbase.Dockerfile
agent_c_config/: _agent_viewer.html  elsa_enrichment_specialist.yaml  elsa_persona.md  iris_inventory_specialist.yaml  iris_persona.md  prompt_section_vars.json  rex_persona.md  whitelist_commands.yaml
backend_utilities/: remove_dates.py
build_support/: README.md  api_entrypoint.sh  posix.env.sh
ci/: build_api_container.bat  build_api_container.sh  build_api_windows.ps1  build_base_container.bat  (+5 more)
src/ace_proto/: pyproject.toml  requirements.txt  setup.py
src/ace_proto/src/: demo.py  demo_plsql.py  demo_python.py
src/ace_proto/src/ts_tool/: api.py  api_approach.md
src/ace_proto/src/ts_tool/core/: code_explorer.py  parser_manager.py
src/ace_proto/src/ts_tool/languages/: base.py  csharp.py  java.py  javascript.py  plsql.py  plsql_parser.py  plsql_scanner.py  python.py
src/ace_proto/src/ts_tool/templates/: context_compact.jinja2  context_standard.jinja2  entity.jinja2  explore_compact.jinja2  explore_standard.jinja2  public_interface.jinja2  summary.jinja2
src/ace_proto/src/ts_tool/utils/: formatting.py
src/ace_proto/tests/: __init__.py  conftest.py  test_api.py  test_csharp.py  test_java.py  test_javascript.py  test_plsql.py  test_python.py
(+513 files in other folders)
